# cookiecutter-fastapi

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/conf/: command.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt
